# auto_localization

./: README.md
auto_localization/: CMakeLists.txt  README.md  initalPath.txt  package.xml
auto_localization/include/auto_localization/: auto_localization.h  ros_class.h
auto_localization/src/: auto_localization.cpp  ros_class.cpp
